--- a/databaze/finished/alka_malá/data.yml
+++ b/databaze/finished/alka_malá/data.yml
@@ -8,18 +8,21 @@ odkazy:
 popis:
   samec:
     barvy:
-    - hlava: []
-    - křídla: []
-    - hruď: []
-    - ocas: []
-    - nohy: []
-    - záda: []
-    - zobák: []
+    - hlava: ['černá', 'bílá']
+    - křídla: ['černá']
+    - hruď: ['bílá']
+    - ocas: ['černá']
+    - nohy: ['černá']
+    - záda: ['černá']
+    - zobák: ['černá', 'bílá']
     fotky:
     - file: alka_malá.jpg
       url: https://commons.wikimedia.org/wiki/File:Alca_torda_Caithness,_Scotland.jpg
       zdroj: wikipedia
-    kropenatost: ''
+    - file: alka_malá_zimní.jpg
+      url: https://commons.wikimedia.org/wiki/File:Pingouin_IMAG0965.jpg
+      zdroj: wikipedia
+    kropenatost: false
   samice: []
-typ: ''
-velikost: ''
+typ: vodní
+velikost: vrána
