--- a/www/images/ptaci/zedníček_skalní/data.yml
+++ b/www/images/ptaci/zedníček_skalní/data.yml
@@ -31,7 +31,7 @@ popis:
     - zobák:
       - černá
     fotky:
-    - file: zedníček_skalní.png
+    - file: zedníček_skalní.jpg
       url: https://commons.wikimedia.org/wiki/File:Wallcreeper_(Tichodroma_muraria)_(27812396379).jpg_-_cropped.png
       zdroj: wikipedia
     kropenatost: false
