Update missing birds

--- a/www/images/ptaci/bekasina_větší/data.yml
+++ b/www/images/ptaci/bekasina_větší/data.yml
@@ -39,7 +39,7 @@ popis:
       - žlutá
     fotky:
     - file: bekasina_větší.jpg
-      url: https://commons.wikimedia.org/wiki/File:Gallinago_media.jpg
+      url: https://commons.wikimedia.org/wiki/File:Greatsnipe_1000_(cropped).jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
