--- a/www/images/ptaci/budníček_pruhohlavý/data.yml
+++ b/www/images/ptaci/budníček_pruhohlavý/data.yml
@@ -34,7 +34,7 @@ popis:
       - žlutá
     fotky:
     - file: budníček_pruhohlavý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Yellow-browed_Warbler.jpg
+      url: https://commons.wikimedia.org/wiki/File:Budn%C3%AD%C4%8DciPruhohlav%C3%AD%C4%8CHS.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
