--- a/www/images/ptaci/budníček_temný/data.yml
+++ b/www/images/ptaci/budníček_temný/data.yml
@@ -27,7 +27,7 @@ popis:
       - žlutá
     fotky:
     - file: budníček_temný.jpg
-      url: https://commons.wikimedia.org/wiki/File:Dusky_Warbler.jpg
+      url: https://commons.wikimedia.org/wiki/File:Dusky_Warbler_Facts_05.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
