--- a/www/images/ptaci/bělořit_šedý/data.yml
+++ b/www/images/ptaci/bělořit_šedý/data.yml
@@ -28,7 +28,7 @@ popis:
       - černá
     fotky:
     - file: bělořit_šedý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Oenanthe_oenanthe_01_II.jpg
+      url: https://commons.wikimedia.org/wiki/File:Male_Wheatear_(Oenanthe_oenanthe),_Skaw_-_geograph.org.uk_-_3482175.jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
