--- a/www/images/ptaci/břehule_říční/data.yml
+++ b/www/images/ptaci/břehule_říční/data.yml
@@ -31,7 +31,7 @@ popis:
       - černá
     fotky:
     - file: břehule_říční.jpg
-      url: https://commons.wikimedia.org/wiki/File:But_where_is_Africa%3F_%287776447260%29_%28cropped%29.jpg
+      url: https://commons.wikimedia.org/wiki/File:Pale-Sand_Martin_from_Kole_Wetlands,_Thrissur_DSCN8814.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
