--- a/www/images/ptaci/cvrčilka_slavíková/data.yml
+++ b/www/images/ptaci/cvrčilka_slavíková/data.yml
@@ -28,6 +28,9 @@ popis:
     - file: cvrčilka_slavíková.jpg
       url: https://commons.wikimedia.org/wiki/File:Locustellaluscinioides.jpg
       zdroj: wikipedia
+    - file: cvrčilka_slavíková_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:%D0%A1%D0%BE%D0%BB%D0%BE%D0%B2%D1%8C%D0%B8%D0%BD%D1%8B%D0%B9_%D1%81%D0%B2%D0%B5%D1%80%D1%87%D0%BE%D0%BA.jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: pěvci
