--- a/www/images/ptaci/kachnice_kaštanová/data.yml
+++ b/www/images/ptaci/kachnice_kaštanová/data.yml
@@ -27,7 +27,7 @@ popis:
       - modrá
     fotky:
     - file: kachnice_kaštanová.jpg
-      url: https://commons.wikimedia.org/wiki/File:Ruddy_duck_2.jpg
+      url: https://commons.wikimedia.org/wiki/File:Ruddy_Duck_(52889940516).jpg
       zdroj: wikipedia
     kropenatost: false
   samice:
