--- a/www/images/ptaci/kačka_strakatá/data.yml
+++ b/www/images/ptaci/kačka_strakatá/data.yml
@@ -58,7 +58,7 @@ popis:
       - šedá
     fotky:
     - file: kačka_strakatá_samice_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:Histrionicus_histrionicus_Barnegat.jpg
+      url: https://commons.wikimedia.org/wiki/File:Harlequin_Duck_(43805937270).jpg
       zdroj: wikipedia
     kropenatost: false
 typ: vodní
