--- a/www/images/ptaci/krocan_divoký/data.yml
+++ b/www/images/ptaci/krocan_divoký/data.yml
@@ -60,7 +60,7 @@ popis:
       - žlutá
     fotky:
     - file: krocan_divoký_samice_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:Female_wild_turkeys.jpg
+      url: https://commons.wikimedia.org/wiki/File:Wild_turkey_king_ranch_4.8.23_DSC_7264-topaz-denoiseraw-sharpen.jpg
       zdroj: wikipedia
     kropenatost: true
 typ: bažantovití
