--- a/www/images/ptaci/moudivláček_lužní/data.yml
+++ b/www/images/ptaci/moudivláček_lužní/data.yml
@@ -32,7 +32,7 @@ popis:
       - černá
     fotky:
     - file: moudivláček_lužní.jpg
-      url: https://commons.wikimedia.org/wiki/File:Remiz_pendulinus_(Marek_Szczepanek).jpg
+      url: https://commons.wikimedia.org/wiki/File:European_Penduline_Tit_Remiz_Pendulinus_(251775445).jpeg
       zdroj: wikipedia
     kropenatost: false
   samice: []
