--- a/www/images/ptaci/ouhorlík_černokřídlý/data.yml
+++ b/www/images/ptaci/ouhorlík_černokřídlý/data.yml
@@ -33,7 +33,7 @@ popis:
       - červená
     fotky:
     - file: ouhorlík_černokřídlý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Glareola_nordmanni.jpg
+      url: https://commons.wikimedia.org/wiki/File:Black-winged_pratincole_(Glareola_nordmanni)_at_Mkhombo_Dam,_Mpumalanga_(36861637734).jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
