--- a/www/images/ptaci/potáplice_žlutozobá/data.yml
+++ b/www/images/ptaci/potáplice_žlutozobá/data.yml
@@ -36,7 +36,7 @@ popis:
       url: https://commons.wikimedia.org/wiki/File:Gavia_adamsii.jpg
       zdroj: wikipedia
     - file: potáplice_žlutozobá_samec_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:YellowbilledLoon23.jpg
+      url: https://commons.wikimedia.org/wiki/File:Yellow-billed_Loon_Chipp_South_8-12-13_Ryan_Askren.jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
