--- a/www/images/ptaci/pěvuška_podhorní/data.yml
+++ b/www/images/ptaci/pěvuška_podhorní/data.yml
@@ -34,7 +34,7 @@ popis:
       - žlutá
     fotky:
     - file: pěvuška_podhorní.jpg
-      url: https://commons.wikimedia.org/wiki/File:Prunella_collaris.jpg
+      url: https://commons.wikimedia.org/wiki/File:Accenteur_alpin_-_Mont_Caume_-_d%C3%A9cembre_2019.jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
