--- a/www/images/ptaci/orel_stepní/data.yml
+++ b/www/images/ptaci/orel_stepní/data.yml
@@ -29,7 +29,7 @@ popis:
       - žlutá
     fotky:
     - file: orel_stepní.jpg
-      url: https://commons.wikimedia.org/wiki/File:Aquila.nipalensis-ZOO.Olomouc.jpg
+      url: https://commons.wikimedia.org/wiki/File:Aquila_nipalensis_156507147.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
