--- a/www/images/ptaci/puštík_bělavý/data.yml
+++ b/www/images/ptaci/puštík_bělavý/data.yml
@@ -36,6 +36,9 @@ popis:
     - file: puštík_bělavý.jpg
       url: https://commons.wikimedia.org/wiki/File:Strix_uralensis_-Banham_Zoo,_Norfolk,_England-8a.jpg
       zdroj: wikipedia
+    - file: puštík_bělavý_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Strix_uralensis_-_0977.jpg
+      zdroj: wikipedia
     kropenatost: true
   samice: []
 typ: dravci
