Update missing birds

--- a/www/images/ptaci/racek_malý/data.yml
+++ b/www/images/ptaci/racek_malý/data.yml
@@ -28,7 +28,7 @@ popis:
       - černá
     fotky:
     - file: racek_malý.jpg
-      url: https://commons.wikimedia.org/wiki/File:RacekMaly.jpg
+      url: https://commons.wikimedia.org/wiki/File:%C4%8Cajka_mal%C3%A1_(Larus_minutus)_a_(4834254958).jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
