--- a/www/images/ptaci/racek_polární/data.yml
+++ b/www/images/ptaci/racek_polární/data.yml
@@ -27,7 +27,7 @@ popis:
       - žlutá
     fotky:
     - file: racek_polární.jpg
-      url: https://commons.wikimedia.org/wiki/File:Adult_Larus_glaucoides,_Swallow_Pond_1.jpg
+      url: https://commons.wikimedia.org/wiki/File:Monacobreen_Glacier,_Svalbard,_Arctic_(20284875275).jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
