--- a/www/images/ptaci/rorýs_velký/data.yml
+++ b/www/images/ptaci/rorýs_velký/data.yml
@@ -32,6 +32,9 @@ popis:
     - file: rorýs_velký.jpg
       url: https://commons.wikimedia.org/wiki/File:Βουνοσταχτάρα_Alpine_Swift_Tachymarptis_melba.jpg
       zdroj: wikipedia
+    - file: rorýs_velký_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Avo_apumel10.jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: vlaštovkovití
