--- a/www/images/ptaci/rybák_černý/data.yml
+++ b/www/images/ptaci/rybák_černý/data.yml
@@ -29,7 +29,7 @@ popis:
       - černá
     fotky:
     - file: rybák_černý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Chlidonias_niger.jpg
+      url: https://commons.wikimedia.org/wiki/File:%C4%8Cor%C3%ADk_%C4%8Dierny_(Chlidonias_niger)_a_(4644831482).jpg
       zdroj: wikipedia
     - file: rybák_černý_samec_1.jpg
       url: https://commons.wikimedia.org/wiki/File:Chlidonias_niger_-Iceland_-flying-8_%284%29.jpg
