--- a/www/images/ptaci/skřivánek_krátkoprstý/data.yml
+++ b/www/images/ptaci/skřivánek_krátkoprstý/data.yml
@@ -36,7 +36,7 @@ popis:
       - žlutá
     fotky:
     - file: skřivánek_krátkoprstý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Shorttoedlark59.JPG
+      url: https://commons.wikimedia.org/wiki/File:Calandrella_brachydactyla_(J%C3%A1n_Svetl%C3%ADk).jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
