--- a/www/images/ptaci/rákosník_velký/data.yml
+++ b/www/images/ptaci/rákosník_velký/data.yml
@@ -31,6 +31,9 @@ popis:
     - file: rákosník_velký.jpg
       url: https://commons.wikimedia.org/wiki/File:Acrocephalus_arundinaceus_-_Great_Reed_Warbler_01.jpg
       zdroj: wikipedia
+    - file: rákosník_velký_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Acrocephalus_arundinaceus_adult_NRM.jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: vodní
