--- a/www/images/ptaci/rákosník_zpěvný/data.yml
+++ b/www/images/ptaci/rákosník_zpěvný/data.yml
@@ -29,6 +29,9 @@ popis:
     - file: rákosník_zpěvný.jpg
       url: https://commons.wikimedia.org/wiki/File:Acrocephalus_palustris_2_(Marek_Szczepanek).jpg
       zdroj: wikipedia
+    - file: rákosník_zpěvný_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Animal_(19898155808).jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: vodní
