Update missing birds

--- a/www/images/ptaci/slípka_modrá/data.yml
+++ b/www/images/ptaci/slípka_modrá/data.yml
@@ -33,7 +33,7 @@ popis:
       - hnědá
     fotky:
     - file: slípka_modrá.jpg
-      url: https://commons.wikimedia.org/wiki/File:Purpurhuhn_(Pophyrio_porphyrio).jpg
+      url: https://commons.wikimedia.org/wiki/File:Western_swamphen_(Porphyrio_porphyrio)_in_Algeria_2.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
