Update missing birds

--- a/www/images/ptaci/racek_sabinův/data.yml
+++ b/www/images/ptaci/racek_sabinův/data.yml
@@ -29,7 +29,7 @@ popis:
       - žlutá
     fotky:
     - file: racek_sabinův.jpg
-      url: https://commons.wikimedia.org/wiki/File:Xema_sabini_-Iceland_-swimming-8_(1).jpg
+      url: https://commons.wikimedia.org/wiki/File:Sabine%27s_Gull_(Larus_sabini)_(Xema_sabini)_(10724042756).jpg
       zdroj: wikipedia
     - file: racek_sabinův_samec_1.jpg
       url: https://commons.wikimedia.org/wiki/File:Xema_sabini_-Iceland_-flying-8_%286%29.jpg
