--- a/www/images/ptaci/ťuhýk_rudohlavý/data.yml
+++ b/www/images/ptaci/ťuhýk_rudohlavý/data.yml
@@ -29,7 +29,7 @@ popis:
       - černá
     fotky:
     - file: ťuhýk_rudohlavý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Lanius_senator_Tàrrega.JPG
+      url: https://commons.wikimedia.org/wiki/File:Sersor.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
