--- a/www/images/ptaci/strakapoud_malý/data.yml
+++ b/www/images/ptaci/strakapoud_malý/data.yml
@@ -57,7 +57,10 @@ popis:
       - černá
     - zobák:
       - černá
-    fotky: []
+    fotky:
+    - file: strakapoud_malý_samice.jpg
+      url: https://commons.wikimedia.org/wiki/File:%D0%9C%D0%B0%D0%BB%D1%8B%D0%B9_%D0%BF%D1%91%D1%81%D1%82%D1%80%D1%8B%D0%B9_%D0%B4%D1%8F%D1%82%D0%B5%D0%BB_%D0%BD%D0%B0_%D1%80%D0%B5%D0%BF%D0%B5%D0%B9%D0%BD%D0%B8%D0%BA%D0%B5_(Dendrocopos_minor,_fem),_%D0%9A%D1%80%D1%8B%D0%BB%D0%B0%D1%82%D1%81%D0%BA%D0%B8%D0%B5_%D1%85%D0%BE%D0%BB%D0%BC%D1%8B.jpg
+      zdroj: wikipedia
     kropenatost: true
 typ: stromoví
 velikost: sýkorka
